@@ -268,3 +268,5 @@ in 0.1.13.
 - improve pymc3 model creation. pymc3 offers different ways to carry out MCMC
   sampling. This may lead to pymc3 being included as a sampling method in
   Curvefitter.
+- implement `invcdf` method for Bounds objects. This will allow creation of
+  prior transforms from [0, 1) to the original range specification.
